# oslo.policy.opa

./: .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  typos.toml
.github/workflows/: ci.yml  committed.yml  convert.yml  linters.yml  release.yml
fixtures/: policy.rego
oslo_policy_opa/: __init__.py  generator.py  neutron_policy_hook.py  opa.py  opts.py  version.py
oslo_policy_opa/generator/: __init__.py  common.py  opa.py  types.py
oslo_policy_opa/tests/: functional.py  test_common.py  test_generator.py  test_plugin.py  test_types.py
