[metadata]
name = oslo.policy.opa
summary = OpenStack Keystone role assignment plugin using OpenFGA
description_file =
    README.rst
author = OpenStack
author_email = artem.goncharov@gmail.com
home_page = https://docs.openstack.org/keystone/latest
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    oslo_policy_opa

[extras]

[entry_points]
#oslo.config.opts =
#    oslo.policy = oslo_policy_opa.opts:list_opts

oslo.policy.rule_checks =
  opa = oslo_policy_opa:OPACheck

