[metadata]
name = oslo.policy.opa
# Metadata beyond this point is present for backwards compatibility with older
# python (building tools) not properly supporting pyproject.toml
summary = "Perform a OpenPolicyAgent check"
description_file =
    README.rst
author = Artem Goncharov
home_page = https://github.com/gtema/oslo.policy.opa
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
  oslo_policy_opa

[entry_points]
oslo.policy.rule_checks =
  opa = oslo_policy_opa.opa:OPACheck
  opa_filter = oslo_policy_opa.opa:OPAFilter

console_scripts =
  oslopolicy-opa-policy-generator = oslo_policy_opa.generator:generate_opa_policy
  oslopolicy-opa-sample-generator = oslo_policy_opa.generator:generate_sample
